
public class Dealer extends Player{
	public Dealer() {}
}
